styles/css/style.css
/* Base */

:root {
    --bg-container: linear-gradient(292.92deg, #e6e6e4 7.23%, #f0e8e2 97.74%);
    --bg-light: #ffffff;
    --bg-button: #96c67f;

    --text-dark: #1f1d2a;
    --text-light: #9b948e;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    height: 100%;
}

body {
    min-height: 100%;
    font-family: "Poppins", serif;
    font-weight: 400;
    font-style: normal;
    background: var(--bg-container);
    color: var(--text-dark);
}

h1,
h2,
h3,
h4,
p {
    margin: 0;
}

ul {
    padding: 0;
}

li {
    list-style: none;
}

a {
    text-decoration: none;
    color: var(--text-dark);
}

/* Typography */

h1 {
    font-size: clamp(1.5rem, 3.25vw, 55px);
    font-weight: 600;
    line-height: 1.5;
}

h2 {
    font-size: 32px;
    font-weight: 600;
    line-height: 48px;
}

h3 {
    font-size: 20px;
    line-height: 30px;
}

h4 {
    font-size: 16px;
    line-height: 24px;
}

/* Layout */

.container-fluid {
    max-width: 1272px;
    padding-bottom: 2rem;
}

@media (min-width: 992px) {
    .container-fluid {
        padding: 2.5rem 0 6.25rem 0;
    }
}

/* Background lines */

.lines {
    max-width: 100%;
    position: absolute;
    top: 0;
    left: -10%;
    z-index: -10;
}

/* Header */

header .logo span {
    font-size: 32px;
}

/* Override bootsrap style */
header .navbar {
    background-color: transparent !important;
}

header .navbar div.container-fluid {
    padding: 0;
}

@media (max-width: 768px) {
    header .navbar .navbar-collapse {
        width: 100vw;
        position: absolute;
        margin-top: 18.5rem;
        z-index: 100;
        background: #f0e8e2;
    }
}

header .navbar .navbar-nav {
    max-width: fit-content;
}

header .navbar a:hover {
    font-size: 600;
    border-bottom: 2px solid var(--text-dark);
    margin-top: -2px;
}

header .sign-in-btn {
    padding: 0.55rem 1.75rem;
    border-radius: 6px;
    border: 1px solid var(--text-dark);
}

header .sign-in-btn:hover {
    transform: scale(1.05);
}

/* Hero */

.hero {
    margin-top: 1.5rem;
}

@media (min-width: 992px) {
    .hero {
        margin-top: 6.25rem;
    }
}

/* Description */

.hero-description h1 {
    text-align: left;
}

.hero-description p {
    margin: 1.5rem 0;
    line-height: 30px;
    color: var(--text-light);
}

@media (min-width: 992px) {
    .hero-description p {
        max-width: 435px;
        margin: 1.875rem 0 3.125rem 0;
    }
}

.hero-btn {
    margin: 0 auto;
    display: block;
    width: fit-content;
    text-align: center;
    background-color: var(--bg-button);
    padding: 0.75rem 1rem;
    border-radius: 6px;
}

@media (min-width: 992px) {
    .hero-btn {
        margin: 0;
        font-size: 20px;
        padding: 1.25rem 1.75rem;
        border-radius: 6px;
    }
}

.hero-btn:hover {
    transform: scale(1.05);
}

/* Person */

.hero-person {
    width: fit-content;
    margin: 1.5rem auto 0 auto;
}

@media (min-width: 992px) {
    .hero-person {
        margin: 0 2.5rem 0 0;
    }
}

.hero-person .main-img {
    border-radius: 50%;
    padding: 0 1.9rem;
}

.hero-person .play-btn-img-wrapper {
    position: absolute;
    right: 0;
    top: 40%;
    background: #9499b7;
    width: 60px;
    height: 60px;
    border-radius: 50%;
}

.hero-person .play-btn-img-wrapper img {
    margin-left: 0.2rem;
    width: 20px;
}

@media (min-width: 992px) {
    .hero-person .play-btn-img-wrapper {
        right: -2%;
        width: 80px;
        height: 80px;
    }

    .hero-person .play-btn-img-wrapper img {
        margin-left: 0.2rem;
        width: 24px;
    }
}

.hero-person .about-card {
    position: absolute;
    bottom: -6%;
    left: 10%;
    background-color: var(--bg-light);
    padding: 0.7rem 1rem 0.7rem 1rem;
    border-radius: 20px;
}

@media (min-width: 992px) {
    .hero-person .about-card {
        padding: 1.4rem 2rem 1.4rem 1.25rem;
    }
}

.hero-person .about-card h4 {
    font-size: 1rem;
    line-height: 24px;
    margin-top: 0.25rem;
}

.hero-person .about-card p {
    font-size: 14px;
    color: var(--text-light);
}

.hero-person .about-card .stars {
    margin-top: 0.75rem;
}

.hero-person .about-card .stars *:not(:first-child) {
    margin-left: 0.2rem;
}

/* Trusted by */

.trusted-by {
    margin-top: 4rem;
    max-width: 763px;
}

@media (min-width: 768px) {
    .trusted-by {
        margin-top: 6rem;
    }
}

@media (min-width: 992px) {
    .trusted-by {
        margin-top: 8rem;
    }
}

.trusted-by .companies {
    margin-top: 1rem;
}

@media (min-width: 992px) {
    .trusted-by .companies {
        margin-top: 1.875rem;
    }
}

.trusted-by .companies img {
    max-height: 30px;
}

/* Team */

.team {
    margin-top: 4rem;
}

@media (min-width: 992px) {
    .team {
        margin-top: 6.25rem;
    }
}

.team > p {
    font-size: 18px;
    line-height: 27px;
}

.team h2 {
    margin-top: 0.625rem;
}

.team h2 .underline {
    position: relative;
}

.team h2 .underline::after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    bottom: 18%;
    height: 6px;
    background-color: #96c67f;
    z-index: -1;
}

.team .cards {
    margin-top: 2rem;
    gap: 1.875rem;
}

@media (min-width: 992px) {
    .team .cards {
        margin-top: 4.375rem;
    }
}

/* Remove bootsrap default styles for card class */
.team .cards .card {
    all: unset;
    background-color: var(--bg-light);
    border-radius: 20px;
}

.team .cards .card-text {
    padding: 1.25rem;
}

.team .cards .card-text h4 {
    font-size: 20px;
}

.team .cards .card-text p {
    margin-top: 0.5rem;
    color: var(--text-light);
}

